
  [ Simon McVittie ]
  * Remove obsolete Breaks on pre-jessie versions of cogl
  * Add versioned Provides for gir1.2-cogl-2.0 and gir1.2-coglpango-2.0,
    the canonical names for the packages containing Cogl-2.0.typelib and
    CoglPango-2.0.typelib. Note that despite the packages' names, there
    is no Cogl-1.0.typelib or CoglPango-1.0.typelib.

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 19 Jan 2018 12:58:04 -0500

cogl (1.22.2-3) unstable; urgency=medium

  * Add debian/patches/fix-undef-build-failure.patch:
    - Patch from Bugzilla to fix kfreebsd build failure
  * Update Vcs fields for conversion to git
  * Add Multi-Arch metadata, thanks multiarch hinter
  * Add debian/gbp.conf
  * Run build tests with xvfb, but still don't fail build for test failures
  * Bump debhelper compat to 11
  * Bump Standards-Version to 4.1.2
  * Build with all hardening flags

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 19 Dec 2017 16:24:19 -0500

cogl (1.22.2-2) unstable; urgency=medium

  * Disable test suite as the tests need a working GL/GLES environment which
    doesn't exist on the buildds.

 -- Michael Biebl <biebl@debian.org>  Tue, 30 Aug 2016 12:40:22 +0200

cogl (1.22.2-1) unstable; urgency=medium

  [ Jeremy Bicha ]
  * Have libcogl-dev depend on libcairo2-dev

  [ Michael Biebl ]
  * New upstream release.
  * Drop 0001-kms-winsys-don-t-wait-for-a-flip-when-page-flipping-.patch,
    merged upstream.
  * Convert from cdbs to dh.
  * Drop dbg packages now that we have automatic dbgsym packages.
    Ensure proper upgrade to the new dbgsym packages by using
    dh_strip --dbgsym-migration. Bump the Build-Depends on debhelper
    accordingly.
  * Bump Standards-Version to 3.9.8.

 -- Michael Biebl <biebl@debian.org>  Tue, 30 Aug 2016 00:57:01 +0200

cogl (1.22.0-2) unstable; urgency=medium

  * Fix black screen after logout. Patch cherry-picked from upstream Git.
    (Closes: #805763)
  * Set pkg-gnome-maintainers@lists.alioth.debian.org as Maintainer and move